スライドのタイトルを「最近コード読んでる？」から「10年後の目標達成プロジェクト」に変更し、内容を大幅に更新しました。また、使用するフォントを「Josefin Sans」から「Open Sans」に変更し、関連する画像を追加しました。README.mdを削除し、package.jsonのスクリプトを整理しました。

--- a/slides/20260126.md
+++ b/slides/20260126.md
@@ -2,139 +2,140 @@
 theme: default
 colorSchema: light
 fonts:
-  sans: "Josefin Sans"
+  sans: "Open Sans"
 ---
 
-# 最近コード読んでる？
+# 10年後の目標達成プロジェクト
 
-## 座談会 突発LT
-
-### takahashi kihiro
+プロジェクトマネジメント実践 期末試験 - 髙橋希尋
 
 ---
-layout: center
----
 
-<div class="text-7xl font-light text-black leading-relaxed">
-  最近コード読んでる？？？もしくは書いてる？
+<div class="text-5xl p-4">Agenda</div>
+
+<div class="flex items-start justify-start pl-36 pt-8">
+  <ol class="text-3xl">
+    <li>プロジェクト概要</li>
+    <li>ヒーローズジャーニー</li>
+    <li>インセプションデッキ</li>
+    <li>10 年のロードマップ</li>
+    <li>今回 AI をどう使ったか</li>
+    <li>まとめ</li>
+  </ol>
 </div>
 
 ---
 
-```ts
-export type AudioChatStatus = "idle" | "listening" | "processing" | "speaking" | "error";
+<div class="text-5xl p-4">プロジェクト概要</div>
 
-export class AudioChatOrchestrator {
-  private config: AudioChatConfig;
-  private callbacks: AudioChatCallbacks;
-  private status: AudioChatStatus = "idle";
-  private isActive = false;
+生活の隙間に入り込む「間合いのある」ヒューマノイドAIを、10年で現実にする
 
-  constructor(
-    private audioInput: AudioInputService,
-    private speechRecognition: SpeechRecognitionService,
-    private speechSynthesis: IntegratedSpeechService,
-    private animationController: AnimationController,
-    config: AudioChatConfig,
-    callbacks: AudioChatCallbacks = {},
-  ) {
-    this.config = config;
-    this.callbacks = callbacks;
-    this.setupEventHandlers();
-    this.updateServiceConfigs();
-  }
-```
+- 10年後の成功条件案
+  - 定性：生活の中で“便利”より先に「一緒に暮らしてる感」が出る体験になっている
+  - 定量
+    - パイロット：家庭20件（まずは学校/身内でもOK）
+    - 継続率：4週間継続率70%、12週間継続率50%（「便利」じゃなく“関係性”で残るかを見る）
+    - 関与：週あたり支援/会話が5回以上の家庭が過半数
+  - 自分（役割の宣言）：物理開発は主戦場にせず、生活向けロボ/デバイスの「ソフトウェア・体験・AI活用」を軸に、プロジェクトを立ち上げて推進する（マネージャー寄り）
 
 ---
-layout: center
----
 
-<div class="text-4xl font-light text-black leading-relaxed">
-  誰だこのコード書いたやつ？！
-  何もわからんぞ！
-</div>
+<div class="text-5xl p-4">ヒーローズジャーニー</div>
 
----
-layout: center
----
-
-<div class="text-4xl font-light text-black leading-relaxed">
-    vibe codingをしすぎて何も理解してない
-    これじゃただのAI自動生成職人じゃないか
+<div class="flex items-start justify-start pl-6 pt-8">
+  <ol class="text-ml">
+    <li>日常：ソフト中心で開発してきたが、ハードは「面白いのに触り方がわからない」まま少し距離がある。</li>
+    <li>出会い：Detroit: Become Human や生活向けロボ（Optimus / Neo）を見て、「この世界線、意外と近い」と感じる。</li>
+    <li>試練：ドロカツでドローン制御に挑戦し、センサー値のブレで挙動が暴れる“物理の不安定さ”にぶつかる。</li>
+    <li>仲間：ログの取り方・切り分け・フィルタ/補正・代替案までAIに支援させ、AIでAIを開発する（開発フロー自体を加速する）。</li>
+    <li>変化：不安定さを敵にせず「測って、直して、学ぶ」ことで再現性を作れると体感し、戦い方（ソフト主導＋簡単ハード）が定まる。</li>
+    <li>帰還：便利ガジェットではなく“間合いのある相棒”を、継続率で評価しながら改善するプロジェクトとして推進する。</li>
+  </ol>
 </div>
 
 ---
 layout: center
 ---
 
-<div class="text-4xl font-light text-black leading-relaxed">
-このままじゃダメだ
+<div class="flex justify-center">
+  <img src="/images/260126_ヒーローズジャーニー.png" width="100%" class="drop-shadow-2xl rounded-3xl" />
 </div>
 
 ---
 layout: center
-class: "text-center"
 ---
 
-<div class="space-y-8">
-  <div class="flex justify-center">
-    <img src="./images/スクリーンショット 2025-11-04 12.31.18.png" width="80%" class="drop-shadow-2xl rounded-3xl" />
+# インセプションデッキ
+
+- Why：生活の大半は物理世界に残っているので、「生活を技術で編集できる世界」の空席を埋める
+- エレベーターピッチ：必要な時だけ助けてくれる“間合いのある”人型デバイス＋AIで、便利より先に「共に暮らす」体験を作る
+- パッケージデザイン：AIが生活文脈を解釈し、最小限の身体性で生活密度の高い関係性を生む（キャッチ：『生活の隙間を、未来で埋める』）
+- やらないこと：産業用/万能/大規模製造/便利ガジェット化/ハード単体ビジネス
+- ご近所さん：AI・ソフト・ロボ・デザイナー・ハード企業・工場・未来ユーザ・投資家
+- 技術：LLM/エージェント＋最小身体性＋センサー＋OTAで、“生活の隙間”に強い設計を継続改善する
+- 夜も眠れない問題：コスト/安全・法規/心理抵抗/生活フィット/便利止まり化
+- 期間：ロードマップをもとに10年間で
+- トレードオフ：体験/関係性を最優先に、生活文脈・学習コストの低さを取り、万能さより“間合い”を取る
+- 必要なもの：人・予算・試作環境・検証ユーザー
+
+---
+layout: center
+---
+
+<div class="flex justify-center">
+  <img src="/images/260126_インセプションデッキ.png" width="100%" class="drop-shadow-2xl rounded-3xl" />
+</div>
+
+---
+
+<div class="text-5xl p-4">10年のロードマップ</div>
+
+- 0〜1年：知識をつける（生活×ロボ×AIの前提、計測/ログ/安全、作り方の型）
+- 1〜2年：小さなものを作っていく（既製キット＋センサー＋ソフトで小さく試作、再現性を作る）
+- 2〜3年：パイロット運用（学校/身内）で回す（継続率・関与・満足を測って改善）
+- 3〜4年：βとして“間合い設計”（常時アテンションしない）を検証し、やらないこと（万能/便利ガジェット化）を守る
+- 4〜6年：ユースケースを2〜3本に増やし、OTA前提の改善サイクルとコミュニティ（使い手/作り手）を育てる
+- 6〜7年：生活文脈へのフィットを強化（データ連携・安全ガイド・オンボーディング）し、継続率を主要KPIとして伸ばす
+- 7〜8年：ハードは協業/既製を前提にしつつ、ソフト/体験/AIで差が出る“相棒感”を磨き、導入チャネル（住宅/施設など）を試す
+- 8〜10年：生活向けロボ/デバイスが普及する前提で、複数ハードに跨る体験OS（関係性・記憶・間合い）として展開し、持続するエコシステムにする
+
+---
+
+<div class="text-5xl p-4">今回AIをどう使ったか</div>
+
+<div class="text-center">
+  <div class="grid grid-cols-3 gap-2">
+    <div class="border p-4 rounded-lg">
+      <div class="text-md space-y-2">
+        <div>1. 構成を考えてもらう</div>
+        <div class="flex justify-center">
+          <img src="/images/260126_構成案.png" width="100%" class="drop-shadow-2xl rounded-3xl" />
+        </div>
+      </div>
+    </div>
+    <div class="border p-4 rounded-lg">
+      <div class="text-md space-y-2">
+        <div>2. slidevでスライド化</div>
+        <div class="flex justify-center">
+          <img src="/images/260126_スライド.png" width="96%" class="drop-shadow-2xl rounded-3xl" />
+        </div>
+      </div>
+    </div>
+    <div class="border p-4 rounded-lg">
+      <div class="text-md space-y-2">
+        <div>3. 画像生成</div>
+        <div class="flex justify-center">
+          <img src="/images/260126_gemini.png" width="96%" class="drop-shadow-2xl rounded-3xl" />
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="text-md font-light space-y-4 text-gray-500">
-    <div>https://simonwillison.net/2025/Oct/7/vibe-engineering/</div>
-  </div>
-</div>
-
----
-layout: center
-class: "text-center"
----
-
-<div class="space-y-8">
-  <h1 class="text-4xl font-light text-gray-700">どのくらい生成AIに任せているかをあらわす指標</h1>
-
-  <div class="flex justify-center">
-    <img src="./images/スクリーンショット 2025-11-04 12.53.56.png" width="80%" class="drop-shadow-2xl rounded-3xl" />
-  </div>
-
-  <div class="text-3md font-light space-y-4 text-gray-500">
-    <div>https://bufferings.hatenablog.com/entry/2025/10/02/235024</div>
-  </div>
-</div>
-
----
-layout: center
----
-
-<div class="text-4xl font-light text-black leading-relaxed">
-I think Cursor really amplifies your abilities; it doesn't replace you.
-</div>
-
-<div class="text-3md font-light space-y-4 text-gray-500">
-cursor meetup toyo #2 Ryolu
-</div>
-
----
-layout: center
----
-
-<div class="gap-8 p-8">
-  <h1 class="text-4xl font-bold">まとめ</h1>
-</div>
-
-
-<div class="text-4xl font-light text-black leading-relaxed">
-ちゃんとコードを読む習慣をつけてVibe Engineeringすれば良い（今更）
 </div>
 
 ---
 
-<div class="gap-8 p-8">
-  <h1 class="text-4xl font-bold">最後に</h1>
-</div>
+<div class="text-5xl p-4">まとめ</div>
 
-
-<div class="text-4xl font-light text-black leading-relaxed">
-10月AI話
-</div>
+- 生活の課題は“画面の外”に多い。物理世界の編集が次のフロンティア
+- 万能ロボじゃなく、生活の隙間に強い「間合い設計」で現実に近づける
+- 不安定さは前提。測って、直して、学ぶ（＋AI）で前に進める
